javaapp/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javaapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: javaapp
  template:
    metadata:
      labels:
        app: javaapp
    spec:
      containers:
      - name: javaapp
        image: bgrbldrn/javaapp
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
