javaapp/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: javaapp
spec:
  ports:
    - name: "8080"
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: javaapp
